<resources>
    <string name="app_name" translatable="false">P2oggle</string>

    <!--Service/notification strings-->
    <string name="service_notification_title">P2oggle is running</string>
    <string name="service_notification_name">Foreground service</string>
    <string name="service_notification_description">Android requires long-running services to present notifications.
                                                    You can safely hide these without losing functionality.</string>
    <string name="service_notification_configure">Configure</string>
    <string name="service_notification_hide">Hide</string>
    <string name="service_description">Listening for switch input</string>
    <string name="service_enabled">Service enabled</string>
    <string name="service_disabled">Service disabled</string>

    <!--Preference strings-->
    <string name="requires_o">Requires Android O or above</string>
    <string name="pref_category_service">Service</string>
    <string name="pref_title_start_on_boot">Start on boot</string>
    <string name="pref_title_broadcasts">Emit broadcasts for other apps</string>
    <string name="pref_title_notification">Notification settings</string>
    <string name="pref_title_stats">Statistics</string>
    <string name="pref_summary_stats">Memory: %1$s | Uptime: %2$s</string>

    <string name="pref_category_overlay">Overlay</string>
    <string name="pref_title_overlay_enable">Enable</string>
    <string name="pref_title_overlay_text">Show text</string>
    <string name="pref_title_overlay_system_theme">Use system accent</string>
    <string name="pref_title_overlay_bg">Background colour</string>
    <string-array name="overlay_bg_indices" translatable="false">
        <item>system</item>
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string-array name="overlay_bg_values">
        <item>Automatic</item>
        <item>Dark</item>
        <item>Light</item>
    </string-array>

    <string name="pref_category_actions">Actions</string>
    <string name="pref_title_action_screen_off">While screen off, toggle</string>
    <string name="pref_title_action_screen_on">While screen on, toggle</string>

    <!--Menu items-->
    <string name="view_repo_title">Visit project repository</string>
    <string name="view_repo_url" translatable="false">"https://github.com/biqqles/p2oggle"</string>
    <string name="pref_title_thread">Visit project thread</string>
    <string name="pref_thread_url"
            translatable="false">"https://forum.xda-developers.com/lenovo-p2/themes/p2oggle-t3965418"</string>

    <!--Dialogue messages-->
    <string name="request_root">This app needs to run as superuser.
                                If you are rooted, please give P2oggle root access.</string>

    <string name="supolicy_issue">Your superuser binary doesn\'t support SELinux policy patching, which is required
                                  by P2oggle. Please use one that does, such as Magisk.</string>

    <string name="broadcasts_info">When enabled, P2oggle will send a broadcast with the intent action\n%1$s\nwhen
                                   the switch is moved up and\n%2$s\nwhen it is moved down.\n\nYou can use these
                                   broadcasts to extend P2oggle with apps that can listen for these intents.</string>

    <string name="request_permission">Please grant access to P2oggle</string>

    <!--Action strings-->
    <string name="off">" off"</string>
    <string name="on">" on"</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="recording">Recording</string>
    <string name="saved">Saved</string>
    <string name="saved_to">Saved to %1$s</string>

    <string name="action_nothing">Nothing</string>
    <string name="action_flashlight">Flashlight</string>
    <string name="action_total_silence">Total silence</string>
    <string name="action_wifi">Wi-Fi</string>
    <string name="action_aeroplane">Aeroplane mode</string>
    <string name="action_power_saver">Battery saver</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="action_nfc">NFC</string>
    <string name="action_data">Mobile data</string>
    <string name="action_play_pause">Play/pause</string>
    <string name="action_silent">Silent</string>
    <string name="action_vibrate">Vibrate</string>
    <string name="action_location">Location</string>
    <string name="action_alarms_only">Alarms only</string>
    <string name="action_priority_only">Priority only</string>
    <string name="action_caffeine">Caffeine</string>
    <string name="action_dictaphone">Dictaphone</string>

</resources>
